# SlugCMD

./: Cargo.toml
src/: color.rs  draw.rs  logger.rs  main.rs  popup.rs  terminal.rs  window.rs
