[package]
name = "slug-cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
enable-ansi-support = "0.2.1"
termcolor = "1.4.1"
winapi = { version = "0.3.9", features = ["wincon", "winnt", "handleapi", "winbase", "processenv", "winuser", "minwindef", "wingdi", "windef", "libloaderapi"] }
log = "0.4.21"


[target.'cfg(windows)']

[profile.release]
lto = true
opt-level = 'z'
